--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.lorislab.maven</groupId>
     <artifactId>maven-jboss-cli-archiver</artifactId>
-    <version>1.0.0</version>	
+    <version>1.0.1-SNAPSHOT</version>	
     <packaging>jar</packaging>
 
     <name>maven-jboss-cli-archiver</name>
@@ -14,7 +14,7 @@
         <connection>scm:git:https://github.com/lorislab/maven-jboss-cli-archiver.git</connection>
         <developerConnection>scm:git:git@github.com:lorislab/maven-jboss-cli-archiver.git</developerConnection>
         <url>https://github.com/lorislab/maven-jboss-cli-archiver</url>
-        <tag>maven-jboss-cli-archiver-1.0.0</tag>
+        <tag>HEAD</tag>
     </scm>
 	
     <licenses>
